# virtual_internships

./: .gitignore  README.md  design.md  documentation.md  obsidian.md  pyproject.toml  requirements.txt
matchmaking/: db.sqlite3
matchmaking/connections/: admin.py  models.py  urls.py  views.py
matchmaking/matchsite/: settings.py  urls.py
matchmaking/profiles/: models.py  views.py
matchmaking/profiles/migrations/: 0001_initial.py  0002_initial.py
matchmaking/static/css/: style.css
matchmaking/static/js/: validation.js
matchmaking/templates/: base.html
matchmaking/templates/connections/: connection_list.html
matchmaking/templates/profiles/: profile_detail.html  profile_form.html  profile_list.html
matchmaking/templates/users/: home.html  login.html  register.html
matchmaking/users/: decorators.py  form.py  forms.py  views.py
matchmaking/users/migrations/: 0001_initial.py
matchmaking/users/templates/matchsite/: login.html  register.html  register_done.html
matchsite/connections/: urls.py
matchsite/connections/migrations/: 0001_initial.py  0002_initial.py  0003_connection_mentee_initiated_and_more.py
matchsite/matchsite/: asgi.py  settings.py  urls.py  wsgi.py
matchsite/profiles/: admin.py  forms.py  urls.py
matchsite/static/js/: validation.js
matchsite/templates/profiles/: profile_detail.html  profile_form.html  profile_list.html
matchsite/templates/users/: login.html
matchsite/users/: forms.py  models.py  urls.py  validators.py  views.py
static/js/: profile-filter.js
