[tool.poetry]
name = "virtual internships wellfound"
version = "0.1.0"
description = ""
authors = ["codeblech <my.malikyash@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.4"
psycopg2-binary = "^2.9.10"
django-widget-tweaks = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
